Fix: reservationId 를 인자로 받아 인벤토리를 업데이트 하는 로직으로 수정